add fftw-dev build dependency for chromaprint

--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -15,6 +15,7 @@ RUN \
  apk add --no-cache --virtual=build-dependencies \
 	cmake \
 	ffmpeg-dev \
+	fftw-dev \
 	g++ \
 	gcc \
 	git \
@@ -30,6 +31,7 @@ RUN \
 	expat \
 	ffmpeg \
 	ffmpeg-libs \
+	fftw \
 	gdbm \
 	gst-plugins-good \
 	gstreamer \
