--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -93,6 +93,7 @@ full_custom_readme: |
 
   ## Versions
 
+  + **07.02.19:** Add fftw-dev build dependency for chromaprint.
   + **28.01.19:** Add pipeline logic and multi arch.
   + **15.08.18:** Rebase to alpine 3.8, use alpine repo version of pylast.
   + **12.08.18:** Add requests pip package.
