push up multi arch, with temporary bandaid fix for armhf

--- a/jenkins-vars.yml
+++ b/jenkins-vars.yml
@@ -18,7 +18,7 @@ repo_vars:
   - DEV_DOCKERHUB_IMAGE = 'lsiodev/beets'
   - PR_DOCKERHUB_IMAGE = 'lspipepr/beets'
   - DIST_IMAGE = 'alpine'
-  - MULTIARCH='false'
+  - MULTIARCH='true'
   - CI='true'
   - CI_WEB='true'
   - CI_PORT='8337'
