--- a/Dockerfile.armhf
+++ b/Dockerfile.armhf
@@ -198,6 +198,9 @@ ARG BEETS_VERSION
 LABEL build_version="Linuxserver.io version:- ${VERSION} Build-date:- ${BUILD_DATE}"
 LABEL maintainer="sparklyballs"
 
+# Add qemu to build on x86_64 systems
+COPY qemu-arm-static /usr/bin
+
 # copy artifacts strip stage
 COPY --from=strip-stage /build/all/usr/  /usr/
 
