pulling out gmusic after local testing I should have done the first time

--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -21,13 +21,10 @@ RUN \
 	git \
 	jpeg-dev \
 	libpng-dev \
-	libxml2-dev \
-	libxslt-dev \
 	make \
 	mpg123-dev \
 	openjpeg-dev \
-	python3-dev \
-	zlib-dev && \
+	python3-dev && \
  echo "**** install runtime packages ****" && \
  apk add --no-cache --upgrade \
 	curl \
@@ -43,8 +40,6 @@ RUN \
 	lame \
 	libffi \
 	libpng \
-	libxml2 \
-	libxslt \
 	mpg123 \
 	nano \
 	openjpeg \
@@ -54,8 +49,7 @@ RUN \
 	python3 \
 	sqlite-libs \
 	tar \
-	wget \
-	zlib && \
+	wget && \
  echo "**** compile mp3gain ****" && \
  mkdir -p \
 	/tmp/mp3gain-src && \
@@ -88,7 +82,6 @@ RUN \
 	beets-extrafiles \
 	discogs-client \
 	flask \
-	gmusicapi \
 	pillow \
 	pip \
 	pyacoustid \
