--- a/Dockerfile.armhf
+++ b/Dockerfile.armhf
@@ -1,5 +1,5 @@
 ARG ALPINE_VER="3.9"
-FROM lsiobase/alpine.armhf:${ALPINE_VER} as fetch-stage
+FROM lsiobase/alpine:arm32v7-${ALPINE_VER} as fetch-stage
 
 ############## fetch stage ##############
 
@@ -42,7 +42,7 @@ RUN \
  git clone https://bitbucket.org/acoustid/chromaprint.git /tmp/chromaprint-src && \
  git clone https://github.com/sbarakat/beets-copyartifacts.git /tmp/copyartifacts-src
 
-FROM lsiobase/alpine.armhf:${ALPINE_VER} as beets_build-stage
+FROM lsiobase/alpine:arm32v7-${ALPINE_VER} as beets_build-stage
 
 ############## beets build stage ##############
 
@@ -99,7 +99,7 @@ RUN \
  make && \
  make install
 
-FROM lsiobase/alpine.armhf:${ALPINE_VER} as chromaprint_build-stage
+FROM lsiobase/alpine:arm32v7-${ALPINE_VER} as chromaprint_build-stage
 
 ############## chromaprint build stage ##############
 
@@ -128,7 +128,7 @@ RUN \
  make && \
  make DESTDIR=/build/chromaprint install
 
-FROM lsiobase/alpine.armhf:${ALPINE_VER} as pip-stage
+FROM lsiobase/alpine:arm32v7-${ALPINE_VER} as pip-stage
 
 ############## pip packages install stage ##############
 
@@ -150,7 +150,7 @@ RUN \
 	pyyaml \
 	unidecode
 
-FROM lsiobase/alpine.armhf:${ALPINE_VER} as strip-stage
+FROM lsiobase/alpine:arm32v7-${ALPINE_VER} as strip-stage
 
 ############## strip packages stage ##############
 
@@ -187,7 +187,7 @@ RUN \
 		find /build/all/ -iname "${cleanfiles}" -exec rm -vf '{}' + \
 	; done
 
-FROM lsiobase/alpine.armhf:${ALPINE_VER}
+FROM lsiobase/alpine:arm32v7-${ALPINE_VER}
 
 ############## runtime stage ##############
 
@@ -197,9 +197,6 @@ ARG VERSION
 ARG BEETS_VERSION
 LABEL build_version="Linuxserver.io version:- ${VERSION} Build-date:- ${BUILD_DATE}"
 LABEL maintainer="sparklyballs"
-
-# Add qemu to build on x86_64 systems
-COPY qemu-arm-static /usr/bin
 
 # copy artifacts strip stage
 COPY --from=strip-stage /build/all/usr/  /usr/
