--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -39,6 +39,7 @@ param_ports:
 
 # changelog
 changelogs:
+  - { date: "12.05.19:", desc: "Add flac and mp3val binaries required for badfiles plugin." }
   - { date: "12.04.19:", desc: "Rebase to Alpine 3.9." }
   - { date: "23.03.19:", desc: "Switching to new Base images, shift to arm32v7 tag." }
   - { date: "11.03.19:", desc: "Swap copyartifacts for extrafiles, update endpoints with nightly tag." }
