--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -148,7 +148,9 @@ COPY bandaid/aarch64/ /usr/lib/
 RUN \
  set -ex && \
  pip3 install --no-cache-dir -U \
+	confuse \
 	discogs-client \
+	mediafile \
 	mutagen \
 	pyacoustid \
 	pyyaml \
