--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -39,6 +39,7 @@ param_ports:
 
 # changelog
 changelogs:
+  - { date: "19.12.19:", desc: "Rebasing to alpine 3.11." }
   - { date: "28.06.19:", desc: "Rebasing to alpine 3.10." }
   - { date: "12.05.19:", desc: "Add flac and mp3val binaries required for badfiles plugin." }
   - { date: "12.04.19:", desc: "Rebase to Alpine 3.9." }
