--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -1,4 +1,4 @@
-ARG ALPINE_VER="3.10"
+ARG ALPINE_VER="3.11"
 FROM lsiobase/alpine:arm64v8-${ALPINE_VER} as fetch-stage
 
 ############## fetch stage ##############
@@ -46,6 +46,10 @@ FROM lsiobase/alpine:arm64v8-${ALPINE_VER} as beets_build-stage
 
 ############## beets build stage ##############
 
+# copy artifacts from fetch stage
+COPY --from=fetch-stage /tmp/beets-src /tmp/beets-src
+COPY --from=fetch-stage /tmp/copyartifacts-src /tmp/copyartifacts-src
+
 # set workdir for beets install
 WORKDIR /tmp/beets-src
 
@@ -54,11 +58,6 @@ RUN \
  apk add --no-cache \
 	py3-setuptools \
 	python3-dev
-
-# copy artifacts from fetch stage and apply bandaid
-COPY --from=fetch-stage /tmp/beets-src /tmp/beets-src
-COPY --from=fetch-stage /tmp/copyartifacts-src /tmp/copyartifacts-src
-COPY bandaid/aarch64/ /usr/lib/
 
 # build beets package
 RUN \
@@ -74,7 +73,7 @@ RUN \
  set -ex && \
  python3 setup.py install --prefix=/usr --root=/build/beets
 
-FROM alpine:${ALPINE_VER} as mp3gain_build-stage
+FROM lsiobase/alpine:arm64v8-${ALPINE_VER} as mp3gain_build-stage
 
 ############## mp3gain build stage ##############
 
@@ -141,15 +140,13 @@ RUN \
 	py3-pip \
 	python3-dev
 
-# apply bandaid
-COPY bandaid/aarch64/ /usr/lib/
-
 # install pip packages
 RUN \
  set -ex && \
  pip3 install --no-cache-dir -U \
 	confuse \
 	discogs-client \
+	enum34 \
 	mediafile \
 	mutagen \
 	pyacoustid \
@@ -164,7 +161,7 @@ FROM lsiobase/alpine:arm64v8-${ALPINE_VER} as strip-stage
 COPY --from=beets_build-stage /build/beets/usr/ /build/all//usr/
 COPY --from=chromaprint_build-stage /build/chromaprint/usr/ /build/all//usr/
 COPY --from=mp3gain_build-stage /build/mp3gain/usr/ /build/all//usr/
-COPY --from=pip-stage /usr/lib/python3.7/site-packages /build/all/usr/lib/python3.7/site-packages
+COPY --from=pip-stage /usr/lib/python3.8/site-packages /build/all/usr/lib/python3.8/site-packages
 
 # install strip packages
 RUN \
@@ -178,7 +175,7 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 # strip packages
 RUN \
 	set -ex && \
- for dirs in usr/bin usr/lib usr/lib/python3.7/site-packages; \
+ for dirs in usr/bin usr/lib usr/lib/python3.8/site-packages; \
 	do \
 		find /build/all/"${dirs}" -type f | \
 		while read -r files ; do strip "${files}" || true \
@@ -186,7 +183,7 @@ RUN \
 	; done
 
 # remove unneeded files
-RUN \
+RUN \	
 	set -ex && \
  for cleanfiles in *.la *.pyc *.pyo; \
 	do \
@@ -204,9 +201,8 @@ ARG BEETS_VERSION
 LABEL build_version="Linuxserver.io version:- ${VERSION} Build-date:- ${BUILD_DATE}"
 LABEL maintainer="sparklyballs"
 
-# copy artifacts strip stage and apply bandaid
+# copy artifacts strip stage
 COPY --from=strip-stage /build/all/usr/  /usr/
-COPY bandaid/aarch64/ /usr/lib/
 
 # install runtime packages
 RUN \
@@ -230,7 +226,6 @@ RUN \
 	py3-requests \
 	py3-setuptools \
 	py3-six \
-	py-enum34 \
 	python3 \
 	sqlite-libs \
 	tar \
