--- a/Dockerfile.armhf
+++ b/Dockerfile.armhf
@@ -1,11 +1,11 @@
-FROM lsiobase/alpine:arm32v7-3.11
+FROM ghcr.io/linuxserver/baseimage-alpine:arm32v7-3.11
 
 # set version label
 ARG BUILD_DATE
 ARG VERSION
 ARG BEETS_VERSION
 LABEL build_version="Linuxserver.io version:- ${VERSION} Build-date:- ${BUILD_DATE}"
-LABEL maintainer="sparklyballs"
+LABEL maintainer="aptalca"
 
 RUN \
  echo "**** install build packages ****" && \
