update readme with app setup info

--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -37,6 +37,19 @@ param_usage_include_ports: true
 param_ports:
   - { external_port: "8337", internal_port: "8337", port_desc: "Application WebUI" }
 
+# application setup block
+app_setup_block_enabled: true
+app_setup_block: |
+  Edit the config file in /config
+
+  To edit the config from within the container use `beet config -e`
+
+  For a command prompt as user abc `docker exec -it -u abc beets bash`
+
+  See [Beets](http://beets.io/) for more info.
+
+  Contains [beets-copyartifacts](https://github.com/sbarakat/beets-copyartifacts) plugin, [configuration details](https://github.com/sbarakat/beets-copyartifacts#configuration)
+
 # changelog
 changelogs:
   - { date: "19.12.19:", desc: "Rebasing to alpine 3.11." }
