Add missing changes from master branch

--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -5,6 +5,7 @@ FROM ghcr.io/linuxserver/baseimage-alpine:arm64v8-${ALPINE_VER} as fetch-stage
 
 # package versions
 ARG MP3GAIN_VER="1.6.2"
+ARG MP3VAL_VER="0.1.8"
 
 # install fetch packages
 RUN \
@@ -23,24 +24,31 @@ RUN \
  set -ex && \
  mkdir -p \
 	/tmp/beets-src \
-	/tmp/mp3gain-src && \
+	/tmp/mp3gain-src \
+	/tmp/mp3val-src && \
  if [ -z ${BEETS_VERSION+x} ] ; then \
  BEETS_RAW_COMMIT=$(curl -sX GET "https://api.github.com/repos/beetbox/beets/commits/master" \
 	| jq -r .sha) && \
  BEETS_VERSION="${BEETS_RAW_COMMIT:0:7}"; \
  fi && \
  curl -o \
- /tmp/beets.tar.gz -L \
+ /tmp/beets.tar.gz -sL \
 	"https://github.com/sampsyo/beets/archive/${BEETS_VERSION}.tar.gz" && \
  curl -o \
- /tmp/mp3gain.zip -L \
+ /tmp/mp3gain.zip -sL \
 	"https://sourceforge.net/projects/mp3gain/files/mp3gain/${MP3GAIN_VER}/mp3gain-${MP3GAIN_VER//./_}-src.zip" && \
+ curl -o \
+ /tmp/mp3val.tar.gz -sL \
+	"https://downloads.sourceforge.net/mp3val/mp3val-${MP3VAL_VER}-src.tar.gz" && \
  tar xf \
  /tmp/beets.tar.gz -C \
 	/tmp/beets-src --strip-components=1 && \
  unzip -q /tmp/mp3gain.zip -d /tmp/mp3gain-src && \
+ tar xf \
+ /tmp/mp3val.tar.gz -C \
+	/tmp/mp3val-src --strip-components=1 && \
  git clone https://bitbucket.org/acoustid/chromaprint.git /tmp/chromaprint-src && \
- git clone https://github.com/sbarakat/beets-copyartifacts.git /tmp/copyartifacts-src
+ git clone https://github.com/Holzhaus/beets-extrafiles.git /tmp/extrafiles-src
 
 FROM ghcr.io/linuxserver/baseimage-alpine:arm64v8-${ALPINE_VER} as beets_build-stage
 
@@ -48,7 +56,7 @@ FROM ghcr.io/linuxserver/baseimage-alpine:arm64v8-${ALPINE_VER} as beets_build-s
 
 # copy artifacts from fetch stage
 COPY --from=fetch-stage /tmp/beets-src /tmp/beets-src
-COPY --from=fetch-stage /tmp/copyartifacts-src /tmp/copyartifacts-src
+COPY --from=fetch-stage /tmp/extrafiles-src /tmp/extrafiles-src
 
 # set workdir for beets install
 WORKDIR /tmp/beets-src
@@ -65,10 +73,10 @@ RUN \
  python3 setup.py build && \
  python3 setup.py install --prefix=/usr --root=/build/beets
 
-# set workdir for copyartifacts install
-WORKDIR /tmp/copyartifacts-src
+# set workdir for extrafiles install
+WORKDIR /tmp/extrafiles-src
 
-# build copyartifacts package
+# build extrafiles package
 RUN \
  set -ex && \
  python3 setup.py install --prefix=/usr --root=/build/beets
@@ -98,6 +106,30 @@ RUN \
  sed -i "s#/usr/local/bin#/build/mp3gain/usr/bin#g" Makefile && \
  make && \
  make install
+
+FROM ghcr.io/linuxserver/baseimage-alpine:arm64v8-${ALPINE_VER} as mp3val_build-stage
+
+############## mp3val build stage ##############
+
+# copy artifacts from fetch stage
+COPY --from=fetch-stage /tmp/mp3val-src /tmp/mp3val-src
+
+# set workdir
+WORKDIR /tmp/mp3val-src
+
+# install build packages
+RUN \
+ apk add --no-cache \
+	g++ \
+	make
+
+# build package
+RUN \
+ set -ex && \
+ mkdir -p \
+	/build/mp3val/usr/bin && \
+ make -f Makefile.linux && \
+ cp -p mp3val /build/mp3val/usr/bin
 
 FROM ghcr.io/linuxserver/baseimage-alpine:arm64v8-${ALPINE_VER} as chromaprint_build-stage
 
@@ -161,6 +193,7 @@ FROM ghcr.io/linuxserver/baseimage-alpine:arm64v8-${ALPINE_VER} as strip-stage
 COPY --from=beets_build-stage /build/beets/usr/ /build/all//usr/
 COPY --from=chromaprint_build-stage /build/chromaprint/usr/ /build/all//usr/
 COPY --from=mp3gain_build-stage /build/mp3gain/usr/ /build/all//usr/
+COPY --from=mp3val_build-stage /build/mp3val/usr/ /build/all//usr/
 COPY --from=pip-stage /usr/lib/python3.8/site-packages /build/all/usr/lib/python3.8/site-packages
 
 # install strip packages
@@ -183,7 +216,7 @@ RUN \
 	; done
 
 # remove unneeded files
-RUN \	
+RUN \
 	set -ex && \
  for cleanfiles in *.la *.pyc *.pyo; \
 	do \
@@ -210,6 +243,7 @@ RUN \
 	curl \
 	ffmpeg \
 	fftw \
+	flac \
 	mpg123 \
 	nano \
 	jq \
