Fix readme app setup info

--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -48,7 +48,7 @@ app_setup_block: |
 
   See [Beets](http://beets.io/) for more info.
 
-  Contains [beets-copyartifacts](https://github.com/sbarakat/beets-copyartifacts) plugin, [configuration details](https://github.com/sbarakat/beets-copyartifacts#configuration)
+  Contains [beets-extrafiles](https://github.com/Holzhaus/beets-extrafiles) plugin, [configuration details](https://github.com/Holzhaus/beets-extrafiles#usage)
 
 # changelog
 changelogs:
