--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -1,4 +1,6 @@
-FROM ghcr.io/linuxserver/baseimage-alpine:arm64v8-3.15
+# syntax=docker/dockerfile:1
+
+FROM ghcr.io/linuxserver/baseimage-alpine:arm64v8-3.17
 
 # set version label
 ARG BUILD_DATE
@@ -10,21 +12,19 @@ LABEL maintainer="aptalca"
 RUN \
   echo "**** install build packages ****" && \
   apk add --no-cache --virtual=build-dependencies --upgrade \
+    build-base \
+    cargo \
     cmake \
     ffmpeg-dev \
     fftw-dev \
-    g++ \
-    gcc \
     git \
     jpeg-dev \
     libpng-dev \
-    make \
     mpg123-dev \
     openjpeg-dev \
     python3-dev && \
   echo "**** install runtime packages ****" && \
   apk add --no-cache --upgrade \
-    curl \
     expat \
     ffmpeg \
     ffmpeg-libs \
@@ -34,7 +34,6 @@ RUN \
     gst-plugins-good \
     gstreamer \
     jpeg \
-    jq \
     lame \
     libffi \
     libpng \
@@ -42,12 +41,9 @@ RUN \
     nano \
     openjpeg \
     py3-gobject3 \
-    py3-pip \
     py3-pylast \
     python3 \
-    sqlite-libs \
-    tar \
-    wget && \
+    sqlite-libs && \
   echo "**** compile mp3gain ****" && \
   mkdir -p \
     /tmp/mp3gain-src && \
@@ -81,12 +77,13 @@ RUN \
   make install && \
   echo "**** install pip packages ****" && \
   if [ -z ${BEETS_VERSION+x} ]; then \
-    BEETS_VERSION=$(curl -sL  https://pypi.python.org/pypi/beets/json \
-    |jq -r '. | .info.version'); \
+    BEETS_VERSION=$(curl -sL  https://pypi.python.org/pypi/beets/json |jq -r '. | .info.version'); \
   fi && \
-  python3 -m pip install --upgrade pip && \
-  pip3 install -U --no-cache-dir --find-links https://wheel-index.linuxserver.io/alpine/ \
-    wheel \
+  python3 -m ensurepip && \
+  pip3 install -U --no-cache-dir \
+    pip \
+    wheel && \
+  pip3 install -U --no-cache-dir --find-links https://wheel-index.linuxserver.io/alpine-3.17/ \
     beautifulsoup4 \
     beets==${BEETS_VERSION} \
     beets-extrafiles \
@@ -100,8 +97,9 @@ RUN \
   apk del --purge \
     build-dependencies && \
   rm -rf \
-    /root/.cache \
-    /tmp/*
+    /tmp/* \
+    $HOME/.cache \
+    $HOME/.cargo
 
 # environment settings
 ENV BEETSDIR="/config" \
