Install chromaprint from repo, add beetscamp plugin

--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -45,7 +45,6 @@ RUN \
   tar xf \
     /tmp/mp3val.tar.gz -C \
     /tmp/mp3val-src --strip-components=1 && \
-  git clone https://bitbucket.org/acoustid/chromaprint.git /tmp/chromaprint-src && \
   git clone https://github.com/Holzhaus/beets-extrafiles.git /tmp/extrafiles-src
 
 FROM ghcr.io/linuxserver/baseimage-alpine:arm64v8-${ALPINE_VER} as beets_build-stage
@@ -127,34 +126,6 @@ RUN \
   make -f Makefile.linux && \
   cp -p mp3val /build/mp3val/usr/bin
 
-FROM ghcr.io/linuxserver/baseimage-alpine:arm64v8-${ALPINE_VER} as chromaprint_build-stage
-
-############## chromaprint build stage ##############
-
-# copy artifacts from fetch stage
-COPY --from=fetch-stage /tmp/chromaprint-src /tmp/chromaprint-src
-
-# set workdir
-WORKDIR /tmp/chromaprint-src
-
-# install build packages
-RUN \
-  apk add --no-cache \
-    build-base \
-    cmake \
-    ffmpeg-dev \
-    fftw-dev
-
-# build package
-RUN \
-  set -ex && \
-  cmake \
-    -DBUILD_TOOLS=ON \
-    -DCMAKE_BUILD_TYPE=Release \
-    -DCMAKE_INSTALL_PREFIX:PATH=/usr && \
-  make && \
-  make DESTDIR=/build/chromaprint install
-
 FROM ghcr.io/linuxserver/baseimage-alpine:arm64v8-${ALPINE_VER} as pip-stage
 
 ############## pip packages install stage ##############
@@ -174,6 +145,7 @@ RUN \
     pip \
     wheel && \
   pip3 install -U --no-cache-dir --find-links https://wheel-index.linuxserver.io/alpine-3.17/ \
+    beetcamp \
     confuse \
     discogs-client \
     enum34 \
