adding change to other Dockerfiles + log entry

--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -87,6 +87,7 @@ RUN \
     pyacoustid \
     pylast \
     requests \
+    requests_oauthlib \
     unidecode && \
   echo "**** cleanup ****" && \
   apk del --purge \
