--- a/Dockerfile.armhf
+++ b/Dockerfile.armhf
@@ -87,6 +87,7 @@ RUN \
     pyacoustid \
     pylast \
     requests \
+    requests_oauthlib \
     unidecode && \
   echo "**** cleanup ****" && \
   apk del --purge \
