--- a/jenkins-vars.yml
+++ b/jenkins-vars.yml
@@ -6,6 +6,7 @@ external_type: github_commit
 release_type: prerelease
 release_tag: nightly
 ls_branch: nightly
+build_armhf: false
 repo_vars:
   - BUILD_VERSION_ARG = 'BEETS_VERSION'
   - EXT_GIT_BRANCH = 'master'
