--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -83,7 +83,7 @@ RUN \
     discogs-client \
     flask \
     PyGObject \
-    pillow \
+    Pillow==9.5.0 \
     pyacoustid \
     pylast \
     requests \
