Rebase to Alpine 3.19
Signed-off-by: Eric Nemchik <eric@nemchik.com>

--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -25,9 +25,9 @@ param_env_vars:
   - {env_var: "TZ", env_value: "Europe/London", desc: "Specify a timezone to use EG Europe/London."}
 param_usage_include_vols: true
 param_volumes:
-  - {vol_path: "/config", vol_host_path: "</path/to/appdata/config>", desc: "Configuration files."}
-  - {vol_path: "/music", vol_host_path: "</path/to/music/library>", desc: "Music library"}
-  - {vol_path: "/downloads", vol_host_path: "</path/to/ingest>", desc: "Non processed music"}
+  - { vol_path: "/config", vol_host_path: "/path/to/{{ project_name }}/config", desc: "Persistent config files" }
+  - {vol_path: "/music", vol_host_path: "/path/to/music/library", desc: "Music library"}
+  - {vol_path: "/downloads", vol_host_path: "/path/to/ingest", desc: "Non processed music"}
 param_usage_include_ports: true
 param_ports:
   - {external_port: "8337", internal_port: "8337", port_desc: "Application WebUI"}
@@ -45,6 +45,7 @@ app_setup_block: |
   Contains [beets-extrafiles](https://github.com/Holzhaus/beets-extrafiles) plugin, [configuration details](https://github.com/Holzhaus/beets-extrafiles#usage)
 # changelog
 changelogs:
+  - { date: "23.12.23:", desc: "Rebase to Alpine 3.19."}
   - {date: "25.08.23:", desc: "Rebase to Alpine 3.18, pin Pillow to 9.5.0."}
   - {date: "07.07.23:", desc: "Deprecate armhf. As announced [here](https://www.linuxserver.io/blog/a-farewell-to-arm-hf)"}
   - {date: "25.03.23:", desc: "Add requests_oauthlib required for [beatport plugin](https://beets.readthedocs.io/en/stable/plugins/beatport.html)."}
