Updated the library required by the discogs plugin.

--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -81,7 +81,7 @@ RUN \
     beets==${BEETS_VERSION} \
     beets-extrafiles \
     beetcamp \
-    discogs-client \
+    python3-discogs-client \
     flask \
     PyGObject \
     pyacoustid \
