--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -88,6 +88,7 @@ RUN \
     pylast \
     requests \
     requests_oauthlib \
+    typing-extensions \
     unidecode && \
   printf "Linuxserver.io version: ${VERSION}\nBuild-date: ${BUILD_DATE}" > /build_version && \
   echo "**** cleanup ****" && \
